vbnc/vbnc/tests/Errors/30311-9.vb
Class T
    Const M_Date As Date = CByte(1)
End Class